--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "^3.2.0"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1"
