--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
     "postcss-loader": "^2.1.6",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
-    "style-loader": "^0.23.1",
-    "html-webpack-plugin": "^3.2.0"
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "classnames": "^2.2.6",
